Updated defaults to personal preference