@@ -1,11 +1,11 @@
 # JRE base
-FROM openjdk:11.0-jre-slim
+FROM openjdk:11.0.9.1-slim-buster
 
 # Environment variables
-ENV MC_VERSION="1.16.3" \
+ENV MC_VERSION="1.16.4" \
     PAPER_BUILD="latest" \
-    MC_RAM="1G" \
-    JAVA_OPTS=""
+    MC_RAM="6G" \
+    JAVA_OPTS="-XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true -jar-Xlog:gc*:logs/gc.log:time,uptime:filecount=5,filesize=1M"
 
 ADD papermc.sh .
 RUN apt-get update \
